# mujoco_LQR

./: .gitignore  CMakeLists.txt  data.txt  leg.txt  rwspeed_leg.txt
julia_lqr/: Project.toml  hopper_implicit_lqr.jl  hopper_lqr.jl  hopper_lqr_rw_only.jl  matlab_dynamics.jl
julia_lqr/rexhopper/: rexhopper.urdf
model/hopper/: hopper_ball_joint.xml  hopper_rev10_mjcf.xml  hopper_rev10_mjcf_fixed.xml
src/: CMakeLists.txt  LQR_ball.cc  LQR_hopper.cc  LQR_quat.cc  QP_hopper.cc  kalman.cpp  kalman.hpp  main.c  makefile  planar_LQR.cc  run_unix
